3.8/meet/embedded/reference/direct-link/index.md
# Direct Link

Redirect individuals to OpenVidu Meet using simple HTML links. This is the simplest way to integrate OpenVidu Meet into your application - perfect when you want participants to join meetings in a new browser tab or window with the polished OpenVidu Meet interface.

## Usage

Create a direct link to an OpenVidu Meet room using a simple HTML anchor tag:

```html
<a href="https://your-domain.com/meet/room/my_room-abcdef?secret=12345">Access room</a>
```

When someone clicks the link, they'll be redirected to the OpenVidu Meet room in their browser, ready to join the meeting.

> **A room URL is a room access link**
>
> The room URL is a [room access link](https://openvidu.io/3.8/meet/features/rooms/access/index.md). The examples use the **anonymous** moderator/speaker links, but a room also has **user** and **identified-guest** links — see [Room Access](https://openvidu.io/3.8/meet/features/rooms/access/index.md) for all of them.
>
> You can get them programmatically from your backend with the [REST API](https://openvidu.io/3.8/meet/embedded/reference/api.html#/schemas/MeetRoom) : the `access.anonymous.moderator.url`, `access.anonymous.speaker.url` and `access.user.url` properties of the `MeetRoom` object, or an identified guest's `accessUrl`.

## API Reference

### Attributes

> **Info**
>
> Direct links accept the same **attributes** as the OpenVidu Meet Web Component. See [Web Component Attributes](https://openvidu.io/3.8/meet/embedded/reference/webcomponent/#attributes) for the full list and descriptions.

Customize the meeting by passing attributes as query parameters in the room URL:

```html
<a href="https://your-domain.com/meet/room/my_room-abcdef?secret=12345&participant-name=John&leave-redirect-url=https://meeting.end.url/">
    Access room as John
</a>
```

### Commands

Direct links do not support programmatic commands since the meeting runs in a separate browser context. If you need to control the meeting programmatically, consider using the [Web Component](https://openvidu.io/3.8/meet/embedded/reference/webcomponent/index.md) or [Iframe](https://openvidu.io/3.8/meet/embedded/reference/iframe/index.md) approaches instead.

### Events

Direct links do not emit events to your application since the meeting runs in a separate browser context. If you need to listen to meeting events, consider using the [Web Component](https://openvidu.io/3.8/meet/embedded/reference/webcomponent/index.md) or [Iframe](https://openvidu.io/3.8/meet/embedded/reference/iframe/index.md) approaches instead.
